@@ -134,7 +134,7 @@ class ImportDialog(qt.QDialog):
 
         # store the current geometry in the settings database
         geometry = ( self.x(), self.y(), self.width(), self.height() )
-        setting.settingdb.database['geometry_importdialog'] = geometry
+        setting.settingdb['geometry_importdialog'] = geometry
 
         qt.QDialog.closeEvent(self, evt)
 
@@ -142,8 +142,8 @@ class ImportDialog(qt.QDialog):
         """Restoring window geometry if possible."""
 
         # if we can restore the geometry, do so
-        if 'geometry_importdialog' in setting.settingdb.database:
-            geometry =  setting.settingdb.database['geometry_importdialog']
+        if 'geometry_importdialog' in setting.settingdb:
+            geometry =  setting.settingdb['geometry_importdialog']
             self.resize( qt.QSize(geometry[2], geometry[3]) )
             self.move( qt.QPoint(geometry[0], geometry[1]) )
 
